--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -1,4 +1,4 @@
-<template name='teacher_view'>
+<template name='custom_view'>
   <link rel='stylesheet' type='text/css' href='materialize/css/materialize.min.css'/>
   {{> custom_view_header}}
   {{> courses_accordion}}
