--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -60,11 +60,9 @@
                       <ul class="collapsible" data-collapsible="expandable">
                         {{#each subjectExams _id}}
                           <li>
-                            <div class="collapsible-header"><i class="mdi-content-content-paste"></i>{{title}}</div>
-                            <div class="collapsible-body">
-                              {{description}}
-                            </div>
+                            <a href='#exam_modal{{_id}}' class="collapsible-header modal-trigger"><i class="mdi-content-content-paste"></i>{{title}}</a>
                           </li>
+                          {{> exam_modal exam=this}}
                         {{/each}}
                       </ul>
                     </div>
@@ -91,7 +89,7 @@
           <ul class="collapsible" data-collapsible="expandable">
             {{#each courseStudents _id}}
               <li>
-                <a href='#modal{{_id}}' class="collapsible-header modal-trigger"><i class="mdi-action-account-box"></i>{{username}}</a>
+                <a href='#student_modal{{_id}}' class="collapsible-header modal-trigger"><i class="mdi-action-account-box"></i>{{username}}</a>
               </li>
               {{> student_modal student=this}}
             {{/each}}
@@ -101,11 +99,13 @@
       </div>
     </div>
   </li>
+  <div id='exam-score-modal-container'>
+  </div>
 </template>
 
 <template name='student_modal'>
   {{#with student}}
-    <div id="modal{{_id}}" class="modal">
+    <div id="student_modal{{_id}}" class="modal">
       <div class="modal-content teal lighten-2 white-text">
         <h4 class='flow-text'>{{profile.firstName}} {{profile.lastName}}</h4>
         <div class='container'>
@@ -136,4 +136,54 @@
       </div>
     </div>
   {{/with}}
+</template>
+
+<template name='exam_modal'>
+  {{#with exam}}
+    <div id="exam_modal{{_id}}" class="modal">
+      <div class="modal-content teal lighten-2 white-text">
+        <h4 class='flow-text'>{{title}}</h4>
+        <div class='container'>
+          <div class='row'>
+            <div class='col s6'>Title</div>
+            <div class='col s6'>{{title}}</div>
+          </div>
+          <div class='row'>
+            <div class='col s6'>Date</div>
+            <div class='col s6'>{{formatDate date}}</div>
+          </div>
+          <div class='row'>
+            <div class='col s6'>Description</div>
+            <div class='col s6'>{{description}}</div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#" value='{{_id}}' class="waves-effect waves-green btn-flat modal-action custom-modal-trigger">Edit Exam Notes</a>
+        <a href="#" class="waves-effect waves-red btn-flat modal-action modal-close">Dismiss</a>
+      </div>
+    </div>
+  {{/with}}
+</template>
+
+<template name='exam_score_modal'>
+  <div id="exam_score_modal" class="modal">
+    <div class="modal-content brown lighten-1 white-text">
+      <h4 class='flow-text'>{{exam.title}}</h4>
+      <div class='container'> 
+        {{#each students}}
+          <div class='row'>
+            <div class='col s6'>{{profile.firstName}} {{profile.lastName}}</div>
+            <div class='col s6'>
+              <input type='number' class='score' value={{examScore}} id='{{_id}}'>
+            </div>
+          </div>
+        {{/each}}
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#" class="waves-effect waves-green btn-flat modal-action modal-close" id='save_scores'>Save</a>
+      <a href="#" class="waves-effect waves-red btn-flat modal-action modal-close">Dismiss</a>
+    </div>
+  </div>
 </template>
