--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -18,8 +18,8 @@
 </template>
 
 <template name='header_links'>
-  <li {{showIf adminAllowed}}><a href="/admin">Admin UI</a></li>
-  <li><a href="/sign-out">Sign Out</a></li>
+  <li {{showIf adminAllowed}}><a href="/admin">Administracion</a></li>
+  <li><a href="/sign-out">Salir</a></li>
 </template>
 
 <template name='courses_accordion'>
