Added templates to columns

--- a/client/templates/auto_tables/pretty_date.html
+++ b/client/templates/auto_tables/pretty_date.html
@@ -1,3 +1,5 @@
 <template name='prettyDate'>
-  {{formatDateTime this.value}}
+  {{#if this.value}}
+    {{formatDateTime this.value}}
+  {{/if}}
 </template>
