--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -32,6 +32,15 @@
   </ul>
 </template>
 
+<template name='tabHeader'>
+  <li class="tab col s3">
+    <a class='{{class}}' href="{{href}}{{id}}">
+      <div class='hide-on-med-and-down'>{{l_label}}</div>
+      <div class='hide-on-large-only'><i class="{{s_label}} small"></i></div>
+    </a>
+  </li>
+</template>
+
 <template name='course_item'>
   <li>
     <div class="collapsible-header"><i class="mdi-action-account-balance"></i>{{name}}</div>
@@ -39,9 +48,9 @@
       <div class="row">
         <div class="col s12">
           <ul class="tabs">
-            <li class="tab col s3"><a class='active' href="#subjects{{_id}}">Materias</a></li>
-            <li class="tab col s3"><a href="#students{{_id}}">Alumnos</a></li>
-            <li class="tab col s3"><a href="#notifications{{_id}}">Notificaciones</a></li>
+            {{> tabHeader class='active' href="#subjects" id=_id l_label="Materias" s_label="mdi-action-class"}}
+            {{> tabHeader href="#students" id=_id l_label="Alumnos" s_label="mdi-action-account-box"}}
+            {{> tabHeader href="#notifications" id=_id l_label="Notificaciones" s_label="mdi-action-announcement"}}
           </ul>
         </div>
         <div id="subjects{{_id}}" class="col s12">
@@ -53,9 +62,9 @@
                   <div class="row">
                     <div class="col s12">
                       <ul class="tabs">
-                        <li class="tab col s3"><a class='active' href="#exams{{_id}}">Examenes</a></li>
-                        <li class="tab col s3"><a href="#notifications{{_id}}">Notificaciones</a></li>
-                        <li class="tab col s3"><a href="#resources{{_id}}">Archivos</a></li>
+                        {{> tabHeader class='active' href="#exams" id=_id l_label="examenes" s_label="mdi-content-content-paste"}}
+                        {{> tabHeader href="#notifications" id=_id l_label="notificaciones" s_label="mdi-action-announcement"}}
+                        {{> tabHeader href="#resources" id=_id l_label="Archivos" s_label="mdi-file-file-download"}}
                       </ul>
                     </div>
                     <div id="exams{{_id}}" class="col s12">
