--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -2,8 +2,38 @@
   <link rel='stylesheet' type='text/css' href='materialize/css/materialize.min.css'/>
   {{> custom_view_header}}
   <div class='accordion_container' style='margin-left:1rem;margin-right:1rem'>
-    {{> courses_accordion}}
+    {{#if isTeacherOrDirective}}
+      {{> courses_accordion}}
+    {{else}}
+      {{#if isParent}}
+        {{> students_accordion}}
+      {{else}}
+        {{> subjects_accordion course_id=user.course_id}}
+      {{/if}}
+    {{/if}}
   </div>
+</template>
+
+<template name='students_accordion'>
+  <ul class="collapsible" data-collapsible="expandable">
+    {{#each students}}
+      <li>
+      <div class="collapsible-header"><i class="mdi-action-account-box"></i>{{firstName}} {{lastName}}</div>
+      <div class="collapsible-body">{{> subjects_accordion course_id=course_id}}</div>
+      </li>
+    {{/each}}
+  </ul>
+</template>
+
+<template name='subjects_accordion'>
+  <ul class="collapsible" data-collapsible="expandable">
+    {{#each subjects}}
+      <li>
+        <div class="collapsible-header"><i class="mdi-action-class"></i>{{name}}</div>
+        <div class="collapsible-body">{{> subject_item subject_id=_id}}</div>
+      </li>
+    {{/each}}
+  </ul>
 </template>
 
 <template name='custom_view_header'>
@@ -41,6 +71,43 @@
   </li>
 </template>
 
+<template name="subject_item">
+  {{#with subject}}
+    <div class="row">
+      <div class="col s12">
+        <ul class="tabs">
+          {{> tabHeader class='active' href="#exams" id=_id l_label="examenes" s_label="mdi-content-content-paste"}}
+          {{> tabHeader href="#notifications" id=_id l_label="notificaciones" s_label="mdi-action-announcement"}}
+          {{> tabHeader href="#resources" id=_id l_label="Archivos" s_label="mdi-file-file-download"}}
+        </ul>
+      </div>
+      <div id="exams{{_id}}" class="col s12">
+        <ul class="collapsible" data-collapsible="expandable">
+          {{#each exams _id}}
+            <li>
+              <a href='#exam_modal{{_id}}' class="collapsible-header modal-trigger"><i class="mdi-content-content-paste"></i>{{title}}</a>
+            </li>
+            {{> exam_modal exam=this}}
+          {{/each}}
+        </ul>
+      </div>
+      <div id="notifications{{_id}}" class="col s12">Notificaciones</div>
+      <div id="resources{{_id}}" class="col s12">
+        <ul class="collection">
+          {{#each resources _id}}
+            <li class='collection-item teal'>
+            <a href="cfs/files/files/{{file_id}}" download="{{filename}}" class="btn waves-effect waves-light"> {{filename}}
+                <i class="mdi-file-file-download"></i>
+              </a>
+              <span class='white-text'> Subido: {{formatDate createdAt}} </span>
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+    </div>
+  {{/with}}
+</template>
+
 <template name='course_item'>
   <li>
     <div class="collapsible-header"><i class="mdi-action-account-balance"></i>{{name}}</div>
@@ -54,47 +121,7 @@
           </ul>
         </div>
         <div id="subjects{{_id}}" class="col s12">
-          <ul class="collapsible" data-collapsible="expandable">
-            {{#each courseSubjects _id}}
-              <li>
-                <div class="collapsible-header"><i class="mdi-action-class"></i>{{name}}</div>
-                <div class="collapsible-body">
-                  <div class="row">
-                    <div class="col s12">
-                      <ul class="tabs">
-                        {{> tabHeader class='active' href="#exams" id=_id l_label="examenes" s_label="mdi-content-content-paste"}}
-                        {{> tabHeader href="#notifications" id=_id l_label="notificaciones" s_label="mdi-action-announcement"}}
-                        {{> tabHeader href="#resources" id=_id l_label="Archivos" s_label="mdi-file-file-download"}}
-                      </ul>
-                    </div>
-                    <div id="exams{{_id}}" class="col s12">
-                      <ul class="collapsible" data-collapsible="expandable">
-                        {{#each subjectExams _id}}
-                          <li>
-                            <a href='#exam_modal{{_id}}' class="collapsible-header modal-trigger"><i class="mdi-content-content-paste"></i>{{title}}</a>
-                          </li>
-                          {{> exam_modal exam=this}}
-                        {{/each}}
-                      </ul>
-                    </div>
-                    <div id="notifications{{_id}}" class="col s12">Notificaciones</div>
-                    <div id="resources{{_id}}" class="col s12">
-                      <ul class="collection">
-                        {{#each subjectResources _id}}
-                          <li class='collection-item teal'>
-                          <a href="cfs/files/files/{{file_id}}" download="{{filename}}" class="btn waves-effect waves-light"> {{filename}}
-                              <i class="mdi-file-file-download"></i>
-                            </a>
-                            <span class='white-text'> Subido: {{formatDate createdAt}} </span>
-                          </li>
-                        {{/each}}
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            {{/each}}
-          </ul>
+          {{> subjects_accordion course_id=_id}}
         </div>
         <div id="students{{_id}}" class="col s12">
           <ul class="collapsible" data-collapsible="expandable">
