Fix modals on student view

--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -12,6 +12,8 @@
       {{/if}}
     {{/if}}
   </div>
+  <div id='exam-score-modal-container'>
+  </div>
 </template>
 
 <template name='custom_view_header'>
