--- a/client/templates/custom_view/accordions/attendances_collection.html
+++ b/client/templates/custom_view/accordions/attendances_collection.html
@@ -1,6 +1,11 @@
 <template name='attendances_collection'>
   <ul class="collection with-header">
-    <li class="collection-header"><h4><input type="date" class="datepicker"></h4></li>
+    <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+      <a class="btn-floating btn-large red">
+        <i class="mdi-action-done-all"></i>
+      </a>
+    </div>
+    <li class="collection-header"><h4><input type="date" class="datepicker attendance-datepicker"></h4></li>
     {{#each students}}
       <li class="collection-item">
         <div class='container'>
@@ -18,7 +23,7 @@
             <div class="col l3 s4 switch">
               <label>
                 Ausente
-                <input type="checkbox">
+                <input type="checkbox" class='attendance-switch'>
                 <span class="lever"></span>
                 Presente
               </label>
