Improve responsive design of attendance

--- a/client/templates/custom_view/items/course_item.html
+++ b/client/templates/custom_view/items/course_item.html
@@ -7,7 +7,7 @@
           <ul class="tabs">
             {{> tabHeader class='active' href="#subjects" id=_id l_label="Materias" s_label="mdi-action-class"}}
             {{> tabHeader href="#students" id=_id l_label="Alumnos" s_label="mdi-action-account-box"}}
-            {{> tabHeader href="#attendances" id=_id l_label="Asistencia" s_label="mdi-action-announcement"}}
+            {{> tabHeader href="#attendances" id=_id l_label="Asistencia" s_label="mdi-action-done-all"}}
           </ul>
         </div>
         <div id="subjects{{_id}}" class="col s12">
