--- a/client/templates/custom_view/accordions/attendances_collection.html
+++ b/client/templates/custom_view/accordions/attendances_collection.html
@@ -8,26 +8,29 @@
     <li class="collection-header"><h4><input type="date" class="datepicker attendance-datepicker"></h4></li>
     {{#each students}}
       <li class="collection-item red lighten-2">
-        <div class='container'>
-          <div class='row'>
-            <div class='col l6 s4 white-text'>
-              {{profile.lastName}}, {{profile.firstName}}
-            </div>
-            <div class='col l3 s4'>
-              <input type="checkbox" id="{{_id}}" class='half-attendance'/>
-              <label for="{{_id}}" class='white-text'>
-                <div class='hide-on-small-only'>Media Falta</div>
-                <div class='hide-on-med-and-up'>1/2</div>
-              </label>
-            </div>
-            <div class="col l3 s4 switch">
-              <label class='white-text'>
-                Ausente
-                <input type="checkbox" class='attendance-switch'>
-                <span class="lever"></span>
-                Presente
-              </label>
-            </div>
+        <div class='row'>
+          <div class='col l6 s4 white-text'>
+            <div class='hide-on-med-and-down'>{{profile.lastName}}, {{profile.firstName}}</div>
+            <div class='hide-on-large-only'>{{profile.shortName}}</div>
+          </div>
+          <div class='col l3 s4'>
+            <input type="checkbox" id="{{_id}}" class='half-attendance'/>
+            <label for="{{_id}}" class='white-text'>
+              <div class='hide-on-small-only'>Media Falta</div>
+              <div class='hide-on-med-and-up'>1/2</div>
+            </label>
+          </div>
+          <div class="col l3 s4 switch">
+            <label class='white-text hide-on-med-and-down'>
+              Ausente
+              <input type="checkbox" class='attendance-switch'>
+              <span class="lever"></span>
+              Presente
+            </label>
+            <label class='white-text hide-on-large-only'>
+              <input type="checkbox" class='attendance-switch'>
+              <span class="lever"></span>
+            </label>
           </div>
         </div>
       </li>
