--- a/client/templates/custom_view/accordions/attendances_collection.html
+++ b/client/templates/custom_view/accordions/attendances_collection.html
@@ -1,14 +1,13 @@
 <template name='attendances_collection'>
   <ul class="collection with-header">
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-      <a class="btn-floating btn-large red">
+      <a class="btn-floating btn-large red" id='save-attendances'>
         <i class="mdi-action-done-all"></i>
       </a>
     </div>
-    <li class="collection-header"><h4><input type="date" class="datepicker attendance-datepicker"></h4></li>
     {{#each students}}
-      <li class="collection-item red lighten-2">
-        <div class='row'>
+      <li class="collection-item {{stateToColor state}}">
+      <div class='row attendance-row' data-student-id='{{_id}}'>
           <div class='col l6 s4 white-text'>
             <div class='hide-on-med-and-down'>{{profile.lastName}}, {{profile.firstName}}</div>
             <div class='hide-on-large-only'>{{profile.shortName}}</div>
