Provide feedback on attendance edition

--- a/client/templates/custom_view/accordions/attendances_collection.html
+++ b/client/templates/custom_view/accordions/attendances_collection.html
@@ -1,7 +1,10 @@
 <template name='attendances_collection'>
+  <div class="progress attendance-progress" style='display:none'>
+      <div class="indeterminate"></div>
+  </div>
   <ul class="collection with-header">
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-      <a class="btn-floating btn-large red" id='save-attendances'>
+      <a class="waves-effect waves-circle waves-light btn-floating btn-large red" id='save-attendances'>
         <i class="mdi-action-done-all"></i>
       </a>
     </div>
