--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -1,4 +1,5 @@
 <template name='custom_view'>
+  {{>connectionBanner}}
   {{> custom_view_header}}
   <div class='accordion_container' style='margin-left:1rem;margin-right:1rem'>
     {{#if isTeacherOrDirective}}
