--- a/client/templates/custom_view/items/attendance_item.html
+++ b/client/templates/custom_view/items/attendance_item.html
@@ -1,15 +1,16 @@
 <template name='attendance_item'>
   <li class="collection-item {{stateToColor student.attendance.state}}">
     <div class='row attendance-row' data-student-id='{{student._id}}'>
-      <div class='col l6 s4 white-text'>
-        <div class='hide-on-med-and-down'>{{student.profile.lastName}}, {{student.profile.firstName}}</div>
-        <div class='hide-on-large-only'>{{student.profile.shortName}}</div>
+      <div class='col l6 s6 white-text valign-wrapper' style='padding-left:0'>
+        <div class='hide-on-med-and-down card-panel teal valign' style='align-content:center'>
+          <div>{{student.profile.lastName}}, {{student.profile.firstName}}</div>
+        </div>
+        <div class='hide-on-large-only card-panel teal left-align' style='margin:0'>{{student.profile.shortName}}</div>
       </div>
-      <div class='col l3 s4'>
+      <div class='col l3 s2'>
         <input type="checkbox" id="{{student._id}}" class='half-attendance' value='{{hasHalfAttendance student.attendance.state}}'/>
         <label for="{{student._id}}" class='white-text'>
           <div class='hide-on-small-only'>Media Falta</div>
-          <div class='hide-on-med-and-up'>1/2</div>
         </label>
       </div>
       <div class="col l3 s4 switch">
