--- a/client/templates/custom_view/items/subject_item.html
+++ b/client/templates/custom_view/items/subject_item.html
@@ -23,10 +23,11 @@
         <ul class="collection">
           {{#each resources _id}}
             <li class='collection-item teal'>
-            <a href="{{url}}" download="{{name}}" class="btn waves-effect waves-light"> {{name}}
+              <a href="{{url}}" download="{{name}}" class="btn waves-effect waves-light"> {{name}}
                 <i class="mdi-file-file-download"></i>
               </a>
               <span class='white-text'> Subido: {{formatDate createdAt}} </span>
+              <a href="#!" class="secondary-content deleteResource" id='{{_id}}'><i class="small mdi-action-delete"></i></a>
             </li>
           {{/each}}
         </ul>
