--- a/client/templates/custom_view/items/subject_item.html
+++ b/client/templates/custom_view/items/subject_item.html
@@ -20,17 +20,24 @@
       </div>
       <div id="notifications{{_id}}" class="col s12">Notificaciones</div>
       <div id="resources{{_id}}" class="col s12">
-        <ul class="collection">
-          {{#each resources _id}}
-            <li class='collection-item teal'>
-              <a href="{{url}}" download="{{name}}" class="btn waves-effect waves-light"> {{name}}
-                <i class="mdi-file-file-download"></i>
-              </a>
-              <span class='white-text'> Subido: {{formatDate createdAt}} </span>
-              <a href="#!" class="secondary-content deleteResource" id='{{_id}}'><i class="small mdi-action-delete"></i></a>
-            </li>
-          {{/each}}
-        </ul>
+        <div class='row'>
+          <div class='col s12 m6'>
+            {{> file_upload}}
+          </div>
+          <div class='col s12 m6'>
+            <ul class="collection">
+              {{#each resources _id}}
+                <li class='collection-item teal'>
+                  <a href="{{url}}" download="{{name}}" class="btn waves-effect waves-light"> {{name}}
+                    <i class="mdi-file-file-download"></i>
+                  </a>
+                  <span class='white-text'> Subido: {{formatDate createdAt}} </span>
+                  <a href="#!" class="secondary-content deleteResource" id='{{_id}}'><i class="small mdi-action-delete" style='color:white'></i></a>
+                </li>
+              {{/each}}
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   {{/with}}
