accounts-core instead of accounts-entry and add materialize as a package

--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -33,7 +33,7 @@
   <li {{showIf adminAllowed}}><a href="/admin">Administracion</a></li>
   <li><a href="/">Home</a></li>
   <li {{hideIf adminAllowed}}><a href="/asistencias">Asistencias</a></li>
-  <li><a href="/sign-out">Salir</a></li>
+  <li><a href="" id='sign-out'>Salir</a></li>
 </template>
 
 <template name='tabHeader'>
