--- a/client/css/loading.css
+++ b/client/css/loading.css
@@ -1,10 +1,10 @@
-.spinner {
+.loading-spinner {
   margin: 100px auto;
   width: 40px;
   height: 40px;
   position: relative;
   text-align: center;
-  
+
   -webkit-animation: rotate 2.0s infinite linear;
   animation: rotate 2.0s infinite linear;
 }
