Replaced connection banner with meteor-status

--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -6,7 +6,7 @@
 </head>
 
 <template name='custom_view'>
-  {{>connectionBanner}}
+  {{> meteorStatus}}
   {{> custom_view_header}}
   <div class='accordion_container' style='margin-left:1rem;margin-right:1rem'>
     {{#if isTeacherOrDirective}}
