Initial Score Card display

--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -40,6 +40,7 @@
   <li {{showIf adminAllowed}}><a href="/admin">Administracion</a></li>
   <li><a href="/">Home</a></li>
   <li {{hideIf adminAllowed}}><a href="/asistencias">Asistencias</a></li>
+  <li {{hideIf adminAllowed}}><a href="/boletin">Boletin</a></li>
   <li><a href="" id='sign-out'>Salir</a></li>
 </template>
 
