Show score card with header for students

--- a/client/templates/score_card.html
+++ b/client/templates/score_card.html
@@ -32,3 +32,9 @@
     </table>
   </div>
 </template>
+
+<template name='score_card_with_header'>
+  {{> meteorStatus}}
+  {{> custom_view_header}}
+  {{> score_card}}
+</template>
