--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -1,5 +1,5 @@
 <template name='custom_view'>
-  <div class='accordion_container' style='margin-left:1rem;margin-right:1rem'>
+  <div class='accordion_container'>
     {{#if isTeacherOrDirective}}
       {{> courses_accordion}}
     {{else}}
