--- a/client/css/side-nav.css
+++ b/client/css/side-nav.css
@@ -1,10 +1,13 @@
-.main {
-  padding-left: 240px;
+.content {
+  margin-top: 64px;
 }
 
-@media only screen and (max-width : 992px) {
-  .main {
-    padding-left: 0;
+@media only screen and (min-width : 992px) {
+  .content {
+    padding-left: 240px;
+  }
+  .back-button {
+    padding-left: 240px;
   }
 }
 
