--- a/client/templates/custom_view/accordions/courses_accordion.html
+++ b/client/templates/custom_view/accordions/courses_accordion.html
@@ -1,7 +1,9 @@
 <template name='courses_accordion'>
-  <ul class="collapsible" data-collapsible="expandable">
-    {{#each courses}}
-      {{> course_item}}
-    {{/each}}
-  </ul>
+  <div class='content'>
+    <div class="collection" style="margin-left: 1rem;margin-right: 1rem;">
+      {{#each courses}}
+        <a href="/clases/{{spacesForUnderscores name}}" class="collection-item push-right navigate-right">{{name}}</a>
+      {{/each}}
+    </div>
+  </div>
 </template>
