--- a/client/templates/custom_view/items/subject_item.html
+++ b/client/templates/custom_view/items/subject_item.html
@@ -2,7 +2,7 @@
   {{#with subject}}
     <div class="row">
       <div class="col s12">
-        <ul class="tabs">
+        <ul class="tabs subjectTabs">
           {{> tabHeader class='active' href="#exams" id=_id l_label="examenes" s_label="mdi-content-content-paste"}}
           {{> tabHeader href="#notifications" id=_id l_label="notificaciones" s_label="mdi-action-announcement"}}
           {{> tabHeader href="#resources" id=_id l_label="Archivos" s_label="mdi-file-file-download"}}
